Mark dependencies correctly.

--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "build": "rm -rf dist && tsc -p tsconfig.build.json",
     "prepublishOnly": "npm run build"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.5",
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
