--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
-    "react": "^18",
-    "react-dom": "^18"
+    "react": ">=18",
+    "react-dom": ">=18"
   },
   "devDependencies": {
     "react": "^18",
