--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "an-example-react-package-built-with-nextjs-tooling",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "main": "./dist/exports.js",
-  "files": ["./dist"],
+  "files": [
+    "./dist"
+  ],
   "exports": {
-    ".": "./dist/exports.js", 
+    ".": "./dist/exports.js",
     "./client": "./dist/export-client.js"
-  }, 
+  },
   "scripts": {
     "next:dev": "next dev",
     "next:build": "next build",
